# safety-net

./: Cargo.toml  LICENSE  README.md  clippy.toml
.github/workflows/: docs.yml  rust.yml
examples/: connections.rs  dont_touch.rs  lut.rs  simple.rs  variants.rs
src/: attribute.rs  circuit.rs  graph.rs  lib.rs  main.rs  netlist.rs  util.rs
tests/: analysis.rs  api.rs  edits.rs  matches.rs  params.rs  verify.rs  verilog.rs
utils/: code_coverage.py
