[package]
name = "circuit"
version = "0.1.0"
edition = "2024"
default-run = "main"

[dependencies]
bitvec = { version = "1.0.1" }
petgraph = { version = "0.8.2", optional = true }
serde = { version = "1.0.219", optional = true, features = ["derive"] }
serde_json = { version = "1.0.141", optional = true }

[features]
# default = [ ]
default = [ "graph", "serde" ]
graph = [ "petgraph" ]
serde = [ "dep:serde", "serde_json", "bitvec/serde" ]
