[package]
name = "circuit"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
bitvec = { version = "1.0.1" }
petgraph = { version = "0.8.2", optional = true }
serde = { version = "1.0.219", optional = true, features = ["derive"] }
serde_json = { version = "1.0.141", optional = true }

[features]
# default = [ ]
default = [ "graph", "serde" ]
graph = [ "petgraph" ]
serde = [ "dep:serde", "serde_json", "bitvec/serde" ]
